--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
@@ -17,8 +18,13 @@
     "@react-navigation/stack": "^6.1.1",
     "react": "17.0.2",
     "react-native": "0.67.1",
+    "react-native-camera": "3.44.3",
     "react-native-gesture-handler": "^2.2.0",
-    "react-native-paper": "^4.11.2",
+    "react-native-pager-view": "^5.4.24",
+    "react-native-paper": "^4.12.1",
+    "react-native-paper-dropdown": "^1.0.7",
+    "react-native-paper-tabs": "^0.7.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.0",
